Hide MonthlyUsage if only one month of data

--- a/ui/app/templates/components/clients/history.hbs
+++ b/ui/app/templates/components/clients/history.hbs
@@ -155,7 +155,7 @@
               @timestamp={{this.responseTimestamp}}
             />
           {{/if}}
-          {{#if this.byMonthActivityData}}
+          {{#if this.hasMultipleMonthsData}}
             <Clients::MonthlyUsage
               @chartLegend={{this.chartLegend}}
               @verticalBarChartData={{this.byMonthActivityData}}
