UI/filter monthly graphs (#15279)
* alphabetize utils

* add util to add namespace key

* finish filtering

* add fake data for filtering

* address comments

* add empty state for no new client counts, when filtered by namespace

* fix mirage clients linting

* re-add namespaces to month object

* clean up filtering

* add tests and refactor accordingly

* fix tooltip bug and chart new month client chart not rendering

* filter out undefined

* optional method chaining

* add filter and fix ticks for line chart

* fix axes domains

* fix average calculation

--- a/ui/app/templates/components/clients/running-total.hbs
+++ b/ui/app/templates/components/clients/running-total.hbs
@@ -1,3 +1,4 @@
+{{! TODO Add conditional, show charts if data available, otherwise show stat text boxes  }}
 <div class="chart-wrapper stacked-charts">
   <div class="single-chart-grid">
     <div class="chart-header has-bottom-margin-xl">
@@ -37,8 +38,17 @@
   </div>
 
   <div class="single-chart-grid">
-    <div class="chart-container-wide">
-      <Clients::VerticalBarChart @dataset={{@barChartData}} @chartLegend={{@chartLegend}} />
+    <div class={{concat (unless this.hasAverageNewClients "chart-empty-state ") "chart-container-wide"}}>
+      <Clients::VerticalBarChart
+        @dataset={{if this.hasAverageNewClients @barChartData false}}
+        @chartLegend={{@chartLegend}}
+        @noDataTitle="No new clients"
+        @noDataMessage={{concat
+          "There are no new clients for this "
+          (if @selectedAuthMethod "auth method" "namespace")
+          " in this date range"
+        }}
+      />
     </div>
 
     <div class="chart-subTitle">
@@ -74,4 +84,5 @@
       <span class="dark-dot"></span><span class="legend-label">{{capitalize @chartLegend.1.label}}</span>
     </div>
   </div>
+
 </div>
