--- a/ui/app/styles/core/charts.scss
+++ b/ui/app/styles/core/charts.scss
@@ -18,6 +18,7 @@
   gap: 2em;
   // grid-template-rows: repeat(3, 1fr);
   width: 100%;
+  margin-bottom: 1rem;
 }
 .single-month-section-title {
   grid-column-start: 1;
