MFA method and enforcement list view
- Added new route for list views
- List mfa methods along with id, type and icon
- Added client side pagination to list views

--- a/ui/app/templates/vault/cluster/access/mfa/method/index.hbs
+++ b/ui/app/templates/vault/cluster/access/mfa/method/index.hbs
@@ -1,9 +1,13 @@
 <PageHeader as |p|>
   <p.levelLeft>
     <h1 class="title is-3">
-      Multi-factor Authentication
+      {{this.model.type}}
     </h1>
   </p.levelLeft>
 </PageHeader>
 
-List view
+<Toolbar>
+  <ToolbarActions />
+</Toolbar>
+
+{{this.model.id}}
