--- a/ui/app/templates/components/mount-accessor-select.hbs
+++ b/ui/app/templates/components/mount-accessor-select.hbs
@@ -16,10 +16,13 @@
   <div class="control is-expanded">
     <div class="select is-fullwidth">
       <select name={{this.name}} id={{this.name}} onchange={{action "change" value="target.value"}}>
+        {{#if this.noDefault}}
+          <option value="">Select one</option>
+        {{/if}}
         {{#each this.authMethods.last.value as |method|}}
           <option selected={{eq this.value method.accessor}} value={{method.accessor}}>
             {{method.path}}
-            ({{method.type}})
+            ({{if this.showAccessor method.accessor method.type}})
           </option>
         {{/each}}
       </select>
