updates to mfa route structure

--- a/ui/app/templates/vault/cluster/access.hbs
+++ b/ui/app/templates/vault/cluster/access.hbs
@@ -13,7 +13,11 @@
     {{/if}}
     {{#if (has-permission "access" routeParams="mfa")}}
       <li>
-        <LinkTo @route="vault.cluster.access.mfa" data-test-link={{true}}>
+        <LinkTo
+          @route="vault.cluster.access.mfa.methods"
+          @current-when="vault.cluster.access.mfa.methods vault.cluster.access.mfa.enforcements"
+          data-test-link={{true}}
+        >
           Multi-factor authentication
         </LinkTo>
       </li>
