MFA method form
- Updated model for form attributes
- Form for editing, creating mfa methods

--- a/ui/app/templates/vault/cluster/access/mfa/methods/index.hbs
+++ b/ui/app/templates/vault/cluster/access/mfa/methods/index.hbs
@@ -24,7 +24,7 @@
           <div>
             <span class="has-text-weight-semibold has-text-black">
               <Icon @size="24" @name={{item.type}} />
-              {{item.type}}
+              {{item.name}}
             </span>
             <br />
             <code class="has-text-grey is-size-8">
