--- a/ui/app/templates/vault/cluster/access/mfa/methods/method/index.hbs
+++ b/ui/app/templates/vault/cluster/access/mfa/methods/method/index.hbs
@@ -1,13 +1,34 @@
 <PageHeader as |p|>
   <p.levelLeft>
     <h1 class="title is-3">
-      {{this.model.type}}
+      <Icon @size="24" @name={{this.model.type}} />
+      {{this.model.name}}
     </h1>
   </p.levelLeft>
 </PageHeader>
 
 <Toolbar>
-  <ToolbarActions />
+  <ToolbarActions>
+    <ToolbarLink @params={{array "vault.cluster.access.mfa.methods.method.edit" this.model.id}}>
+      Edit
+    </ToolbarLink>
+  </ToolbarActions>
 </Toolbar>
 
-{{this.model.id}}
+<div class="box is-fullwidth is-sideless is-paddingless is-marginless">
+  {{#each this.model.attrs as |attr|}}
+    {{#if (eq attr.type "object")}}
+      <InfoTableRow
+        @alwaysRender={{not (is-empty-value (get @model attr.name))}}
+        @label={{or attr.options.label (to-label attr.name)}}
+        @value={{stringify (get @model attr.name)}}
+      />
+    {{else}}
+      <InfoTableRow
+        @alwaysRender={{not (is-empty-value (get @model attr.name))}}
+        @label={{or attr.options.label (to-label attr.name)}}
+        @value={{get @model attr.name}}
+      />
+    {{/if}}
+  {{/each}}
+</div>
