--- a/ui/app/templates/components/mfa/method-form.hbs
+++ b/ui/app/templates/components/mfa/method-form.hbs
@@ -30,6 +30,6 @@
 >
   <p>
     Editing this configuration will have an impact on all authentication types, methods, groups and entities which make use
-    of it. Please make sure you want to make these changes before doing so.
+    of this MFA method. Please make sure you want to make these changes before doing so.
   </p>
 </ConfirmationModal>
