adds login enforcement read views

--- a/ui/app/styles/core/helpers.scss
+++ b/ui/app/styles/core/helpers.scss
@@ -188,6 +188,9 @@
 .has-top-margin-s {
   margin-top: $spacing-s;
 }
+.has-top-margin-xs {
+  margin-top: $spacing-xs;
+}
 .has-top-margin-m {
   margin-top: $spacing-m;
 }
