--- a/ui/app/templates/components/mfa-login-enforcement-form.hbs
+++ b/ui/app/templates/components/mfa-login-enforcement-form.hbs
@@ -9,6 +9,7 @@
     autocomplete="off"
     spellcheck="false"
     value={{@model.name}}
+    disabled={{not @model.isNew}}
     class="input field"
     {{on "input" (pipe (pick "target.value") (fn (mut @model.name)))}}
   />
