--- a/ui/app/templates/vault/cluster/access/mfa/enforcements/index.hbs
+++ b/ui/app/templates/vault/cluster/access/mfa/enforcements/index.hbs
@@ -30,7 +30,7 @@
         </div>
         <div class="level-right is-flex is-paddingless is-marginless">
           <div class="level-item">
-            <PopupMenu @name="auth-backend-nav">
+            <PopupMenu>
               <nav class="menu">
                 <ul class="menu-list">
                   <li>
