--- a/ui/app/templates/components/mfa-setup-step-two.hbs
+++ b/ui/app/templates/components/mfa-setup-step-two.hbs
@@ -1,10 +1,11 @@
 <p>
-  WAITING FOR DESIGN
+  TOTP Multi-factor authentication (MFA) can be enabled here if it is required by your administrator. This will ensure that
+  you are not prevented from logging into Vault in the future, once MFA is fully enforced.
 </p>
 <div class="field has-top-margin-l">
   <MessageError @errorMessage={{this.error}} class="has-top-margin-s" />
   {{#if @warning}}
-    <AlertBanner @type="warning" @title={{@warning}} class="has-top-margin-l" />
+    <AlertBanner @type="info" @title="MFA enabled" @message={{@warning}} class="has-top-margin-l" />
   {{else}}
     <div class="list-item-row">
       <div class="center-display">
@@ -12,9 +13,12 @@
         {{qr-code text=@qrCode colorLight="#F7F7F7" width=155 height=155 correctLevel="L"}}
       </div>
     </div>
-    <div class="has-top-margin-s">
-      <p>
-        WAITING FOR DESIGN
+    <div class="info-table-row has-no-shadow has-top-margin-s">
+      <div class="column info-table-row-edit"><Icon @name="alert-triangle-fill" class="has-text-highlight" /></div>
+      <p class="is-size-8">
+        After you leave this page, this QR code will be removed and
+        <strong>cannot</strong>
+        be regenerated.
       </p>
     </div>
   {{/if}}
