--- a/ui/app/templates/vault/cluster/access.hbs
+++ b/ui/app/templates/vault/cluster/access.hbs
@@ -15,7 +15,7 @@
       <li>
         <LinkTo
           @route="vault.cluster.access.mfa.methods"
-          @current-when="vault.cluster.access.mfa.methods vault.cluster.access.mfa.enforcements"
+          @current-when="vault.cluster.access.mfa.methods vault.cluster.access.mfa.enforcements vault.cluster.access.mfa.index"
           data-test-link={{true}}
         >
           Multi-factor authentication
