--- a/ui/app/templates/vault/cluster/access/mfa/enforcements/enforcement/index.hbs
+++ b/ui/app/templates/vault/cluster/access/mfa/enforcements/enforcement/index.hbs
@@ -1,4 +1,16 @@
 <PageHeader as |p|>
+  <p.top>
+    <nav class="breadcrumb" aria-label="breadcrumb">
+      <ul>
+        <li>
+          <span class="sep">&#x0002f;</span>
+          <LinkTo @route="vault.cluster.access.mfa.enforcements.index">
+            Enforcements
+          </LinkTo>
+        </li>
+      </ul>
+    </nav>
+  </p.top>
   <p.levelLeft>
     <h1 class="title is-3">
       <Icon @name="lock" @size="24" />
