--- a/ui/app/styles/core/helpers.scss
+++ b/ui/app/styles/core/helpers.scss
@@ -81,7 +81,10 @@
 .is-flex-start {
   display: flex !important;
   justify-content: flex-start;
-  gap: $spacing-m;
+
+  &.has-gap {
+    gap: $spacing-m;
+  }
 }
 .is-flex-full {
   flex-basis: 100%;
