--- a/ui/app/templates/components/mfa-setup-step-one.hbs
+++ b/ui/app/templates/components/mfa-setup-step-one.hbs
@@ -15,7 +15,7 @@
     <Input id="uuid" name="uuid" class="input" autocomplete="off" spellcheck="false" autofocus="true" @value={{this.UUID}} />
   </div>
 
-  <div class="is-flex-start">
+  <div class="is-flex-start has-gap">
     <button id="continue" type="submit" class="button is-primary" disabled={{(is-empty-value this.UUID)}}>
       Verify
     </button>
