--- a/ui/app/templates/components/mfa-setup-step-two.hbs
+++ b/ui/app/templates/components/mfa-setup-step-two.hbs
@@ -24,7 +24,7 @@
       </div>
     </div>
   {{/if}}
-  <div class="is-flex-start has-top-margin-l">
+  <div class="is-flex-start has-gap has-top-margin-l">
     <button id="restart" type="button" class="button has-text-danger" {{on "click" this.restartSetup}}>
       Restart setup
     </button>
