--- a/ui/app/templates/vault/cluster/access/mfa/methods/create.hbs
+++ b/ui/app/templates/vault/cluster/access/mfa/methods/create.hbs
@@ -19,8 +19,7 @@
     <p class="has-top-margin-l">
       Multi-factor authentication (MFA) allows you to set up another layer of security on top of existing authentication
       methods. Vault has four available methods.
-      <a href="https://www.vaultproject.io/api-docs/secret/identity/mfa" target="_blank" rel="noopener noreferrer">Learn
-        more.</a>
+      <DocLink @path="/api-docs/secret/identity/mfa">Learn more.</DocLink>
     </p>
     <div class="is-flex-row has-top-margin-xl">
       {{#each this.methodNames as |methodName|}}
@@ -54,11 +53,7 @@
           {{this.formattedSelectedType}}
           MFA method will require a push confirmation on mobile before login.
         {{/if}}
-        <a
-          href={{concat "https://www.vaultproject.io/api-docs/secret/identity/mfa/" this.selectedType}}
-          target="_blank"
-          rel="noopener noreferrer"
-        >Learn more.</a>
+        <DocLink @path={{concat "/api-docs/secret/identity/mfa/" this.selectedType}}>Learn more.</DocLink>
       </p>
       {{! in a future release cards may be displayed to choose from either template or custom config for TOTP }}
       {{! if template is selected a user could choose a predefined config for common authenticators and the values would be populated on the model }}
