--- a/ui/app/templates/vault/cluster/access/mfa/methods/index.hbs
+++ b/ui/app/templates/vault/cluster/access/mfa/methods/index.hbs
@@ -18,7 +18,7 @@
 
 {{#if this.model.meta.total}}
   {{#each this.model as |item|}}
-    <MfaMethodListItem @model={{item}} />
+    <Mfa::MethodListItem @model={{item}} />
   {{/each}}
 {{/if}}
 {{#if (gt this.model.meta.lastPage 1)}}
