--- a/ui/app/templates/vault/cluster/access/mfa/methods/method/index.hbs
+++ b/ui/app/templates/vault/cluster/access/mfa/methods/method/index.hbs
@@ -1,34 +1,78 @@
 <PageHeader as |p|>
   <p.levelLeft>
     <h1 class="title is-3">
-      <Icon @size="24" @name={{this.model.type}} />
-      {{this.model.name}}
+      <Icon @size="24" @name={{this.model.method.type}} />
+      {{this.model.method.name}}
     </h1>
   </p.levelLeft>
 </PageHeader>
 
-<Toolbar>
-  <ToolbarActions>
-    <ToolbarLink @params={{array "vault.cluster.access.mfa.methods.method.edit" this.model.id}}>
-      Edit
-    </ToolbarLink>
-  </ToolbarActions>
-</Toolbar>
+<div class="tabs-container box is-sideless is-fullwidth is-paddingless is-marginless">
+  <nav class="tabs">
+    <ul>
+      <LinkTo @route="vault.cluster.access.mfa.methods.method" @query={{hash tab="config"}}>
+        Configuration
+      </LinkTo>
+      <LinkTo @route="vault.cluster.access.mfa.methods.method" @query={{hash tab="enforcements"}}>
+        Enforcements
+      </LinkTo>
+    </ul>
+  </nav>
+</div>
 
-<div class="box is-fullwidth is-sideless is-paddingless is-marginless">
-  {{#each this.model.attrs as |attr|}}
-    {{#if (eq attr.type "object")}}
-      <InfoTableRow
-        @alwaysRender={{not (is-empty-value (get @model attr.name))}}
-        @label={{or attr.options.label (to-label attr.name)}}
-        @value={{stringify (get @model attr.name)}}
+{{#if (eq this.tab "config")}}
+  <Toolbar>
+    <ToolbarActions>
+      <ConfirmAction
+        @buttonClasses="toolbar-link"
+        @disabled={{not (is-empty this.model.enforcements)}}
+        @onConfirmAction={{this.deleteMethod}}
+        @confirmTitle="Are you sure?"
+        @confirmMessage="Deleting this MFA configuration is permanent, and it will no longer be available."
+        @confirmButtonText="Delete"
+      >
+        Delete
+      </ConfirmAction>
+      <ToolbarLink @params={{array "vault.cluster.access.mfa.methods.method.edit" this.model.method.id}}>
+        Edit
+      </ToolbarLink>
+    </ToolbarActions>
+  </Toolbar>
+  <div class="box is-fullwidth is-sideless is-paddingless is-marginless">
+    {{#each this.model.method.attrs as |attr|}}
+      {{#if (eq attr.type "object")}}
+        <InfoTableRow
+          @alwaysRender={{not (is-empty-value (get this.model.method attr.name))}}
+          @label={{or attr.options.label (to-label attr.name)}}
+          @value={{stringify (get this.model.method attr.name)}}
+        />
+      {{else}}
+        <InfoTableRow
+          @alwaysRender={{not (is-empty-value (get this.model.method attr.name))}}
+          @label={{or attr.options.label (to-label attr.name)}}
+          @value={{get this.model.method attr.name}}
+        />
+      {{/if}}
+    {{/each}}
+  </div>
+{{else if (eq this.tab "enforcements")}}
+  <Toolbar>
+    <ToolbarActions>
+      <ToolbarLink @type="add" @params={{array "vault.cluster.access.mfa.enforcements.create"}}>
+        New enforcement
+      </ToolbarLink>
+    </ToolbarActions>
+  </Toolbar>
+  <div class="box is-fullwidth is-sideless is-paddingless is-marginless">
+    {{#if (is-empty this.model.enforcements)}}
+      <EmptyState
+        @title="No enforcements found."
+        @message="No enforcements are applied to this MFA method. Edit an existing enforcement or add a new one to get started."
       />
     {{else}}
-      <InfoTableRow
-        @alwaysRender={{not (is-empty-value (get @model attr.name))}}
-        @label={{or attr.options.label (to-label attr.name)}}
-        @value={{get @model attr.name}}
-      />
+      {{#each this.model.enforcements as |item|}}
+        <Mfa::LoginEnforcementListItem @model={{item}} />
+      {{/each}}
     {{/if}}
-  {{/each}}
-</div>
+  </div>
+{{/if}}
