--- a/ui/app/templates/components/config-pki-ca.hbs
+++ b/ui/app/templates/components/config-pki-ca.hbs
@@ -237,17 +237,24 @@
         Set signed intermediate
       </button>
     </div>
-    <div class="control">
-      {{#if this.model.canDeleteRoot}}
-        <ConfirmAction
-          @buttonClasses="button"
-          @confirmTitle="Delete default issuer?"
-          @confirmMessage="The default issuer certificate will be deleted, but its key material preserved."
-          @onConfirmAction={{action "deleteCA"}}
-        >
-          Delete
-        </ConfirmAction>
-      {{/if}}
-    </div>
+    {{#unless this.needsConfig}}
+      <div class="control">
+        <ToolTip @verticalPosition="above" @horizontalPosition="center" as |T|>
+          <T.Trigger data-test-tooltip-trigger tabindex="-1">
+            <button type="button" class="button is-primary" disabled={{true}}>
+              Delete
+            </button>
+          </T.Trigger>
+          <T.Content @defaultClass="tool-tip smaller-font">
+            <div class="box" data-test-hover-copy-tooltip-text>
+              Deleting a CA is only available via the CLI and API.
+              <DocLink @path="/api-docs/secret/pki#delete-issuer" class="doc-link-subtle">
+                Learn more
+              </DocLink>
+            </div>
+          </T.Content>
+        </ToolTip>
+      </div>
+    {{/unless}}
   </div>
 {{/if}}
