adds mfa guided setup config view

--- a/ui/app/styles/core/helpers.scss
+++ b/ui/app/styles/core/helpers.scss
@@ -171,6 +171,9 @@
 .has-top-padding-s {
   padding-top: $spacing-s;
 }
+.has-top-padding-l {
+  padding-top: $spacing-l;
+}
 .has-bottom-margin-xs {
   margin-bottom: $spacing-xs;
 }
