--- a/ui/app/templates/components/mfa-login-enforcement-form.hbs
+++ b/ui/app/templates/components/mfa-login-enforcement-form.hbs
@@ -14,7 +14,7 @@
     {{on "input" (pipe (pick "target.value") (fn (mut @model.name)))}}
   />
 
-  {{#unless @mfaMethod}}
+  {{#unless @isInline}}
     <div class="field">
       <FormFieldLabel for="methods" @label="MFA methods" @subText="The MFA method(s) that this enforcement will apply to." />
       {{! component only computes inputValue on init -- ensure Ember Data hasMany promise has resolved }}
@@ -95,7 +95,7 @@
       </button>
     </div>
   </div>
-  {{#if @hasActions}}
+  {{#unless @isInline}}
     <hr />
     <div class="has-top-padding-s">
       <button
@@ -110,5 +110,5 @@
         Cancel
       </button>
     </div>
-  {{/if}}
+  {{/unless}}
 </div>
