hide next button if type is not selected in mfa method create route

--- a/ui/app/templates/vault/cluster/access/mfa/methods/create.hbs
+++ b/ui/app/templates/vault/cluster/access/mfa/methods/create.hbs
@@ -72,7 +72,7 @@
         <button class="button has-left-margin-xs" type="button" {{on "click" this.cancel}}>
           Cancel
         </button>
-      {{else}}
+      {{else if this.type}}
         <button class="button is-primary" type="button" {{on "click" this.createMethod}}>
           Next
         </button>
