--- a/ui/app/templates/components/radio-card.hbs
+++ b/ui/app/templates/components/radio-card.hbs
@@ -26,7 +26,7 @@
       class="radio"
       disabled={{@disabled}}
       @value={{@value}}
-      @groupValue={{this.config.mode}}
+      @groupValue={{@groupValue}}
       @onChange={{@onChange}}
     />
     <label for="radio-card-button"></label>
