adds transition action to configure mfa button on landing page

--- a/ui/app/templates/vault/cluster/access/mfa/index.hbs
+++ b/ui/app/templates/vault/cluster/access/mfa/index.hbs
@@ -15,7 +15,7 @@
       Learn more
     </LearnLink>
   </p>
-  <button type="submit" class="button is-primary">
+  <button type="submit" class="button is-primary" {{on "click" (transition-to "vault.cluster.access.mfa.methods.create")}}>
     Configure MFA
   </button>
 </div>
