--- a/ui/app/templates/components/keymgmt/distribute.hbs
+++ b/ui/app/templates/components/keymgmt/distribute.hbs
@@ -64,35 +64,29 @@
 
     {{#unless @provider}}
       <div class="field">
-        <label class="is-label" for="provider">Provider</label>
-        <p class="sub-text">Select a provider in Vault. If it doesn’t exist yet, you’ll need to add it first.</p>
-        <div class="control is-expanded">
-          <div class="select is-fullwidth">
-            <select
-              name="provider"
-              id="provider"
-              {{on "change" this.handleProvider}}
-              class={{if this.validMatchError.provider "has-error-border"}}
-              data-test-keymgmt-dist-provider
-            >
-              <option value="">
-                Select provider
-              </option>
-              {{#each @providers as |val|}}
-                <option selected={{eq @model.provider val}} value={{val}}>
-                  {{val}}
-                </option>
-              {{/each}}
-            </select>
-          </div>
-        </div>
-        {{#if this.validMatchError.provider}}
-          <AlertInline @paddingTop={{true}} @sizeSmall={{true}} @type="danger" data-test-keymgmt-error="provider">
-            {{this.validMatchError.provider}}
-            To check compatibility,
-            <DocLink class="doc-link-subtle" @path="/docs/secrets/key-management#compatibility">refer to this table</DocLink>.
-          </AlertInline>
-        {{/if}}
+        <SearchSelect
+          @id="provider"
+          @models={{array "keymgmt/provider"}}
+          @onChange={{this.handleProvider}}
+          @passObject={{false}}
+          @inputValue={{this.formData.provider}}
+          @subText="Select a provider in Vault. If it doesn’t exist yet, you’ll need to add it first."
+          @label="Provider"
+          @subLabel=""
+          @fallbackComponent="input-search"
+          @selectLimit="1"
+          @backend={{@backend}}
+          @disallowNewItems={{true}}
+          data-test-keymgmt-dist-provider
+        >
+          {{#if this.validMatchError.provider}}
+            <AlertInline @paddingTop={{true}} @sizeSmall={{true}} @type="danger" data-test-keymgmt-error="provider">
+              {{this.validMatchError.provider}}
+              To check compatibility,
+              <DocLink class="doc-link-subtle" @path="/docs/secrets/key-management#compatibility">refer to this table</DocLink>.
+            </AlertInline>
+          {{/if}}
+        </SearchSelect>
       </div>
     {{/unless}}
 
