Search select label styling and add subText to fallback

--- a/ui/app/templates/components/keymgmt/distribute.hbs
+++ b/ui/app/templates/components/keymgmt/distribute.hbs
@@ -71,8 +71,8 @@
           @passObject={{false}}
           @inputValue={{this.formData.provider}}
           @subText="Select a provider in Vault. If it doesn’t exist yet, you’ll need to add it first."
-          @label="Provider"
-          @subLabel=""
+          @label=""
+          @subLabel="Provider"
           @fallbackComponent="input-search"
           @selectLimit="1"
           @backend={{@backend}}
