--- a/ui/lib/core/addon/templates/components/search-select.hbs
+++ b/ui/lib/core/addon/templates/components/search-select.hbs
@@ -2,6 +2,7 @@
   {{component
     this.fallbackComponent
     label=(or this.label this.subLabel)
+    subText=this.subText
     onChange=(action "onChange")
     inputValue=this.inputValue
     helpText=this.helpText
