--- a/ui/app/templates/components/keymgmt/key-edit.hbs
+++ b/ui/app/templates/components/keymgmt/key-edit.hbs
@@ -24,7 +24,7 @@
     <div class="tabs-container box is-sideless is-fullwidth is-paddingless is-marginless" data-test-keymgmt-key-toolbar>
       <nav class="tabs">
         <ul>
-          <li class={{if (not-eq @tab "versions") "is-active"}}>
+          <li class={{if (not-eq @tab "versions") "active"}}>
             <LinkTo
               @route="vault.cluster.secrets.backend.show"
               @model={{@model.id}}
@@ -34,7 +34,7 @@
               Details
             </LinkTo>
           </li>
-          <li class={{if (eq @tab "versions") "is-active"}}>
+          <li class={{if (eq @tab "versions") "active"}}>
             <LinkTo
               @route="vault.cluster.secrets.backend.show"
               @model={{@model.id}}
@@ -49,6 +49,16 @@
     </div>
     <Toolbar>
       <ToolbarActions>
+        {{#unless @model.distribution}}
+          <button
+            type="button"
+            class="toolbar-link"
+            {{on "click" (fn (mut this.isDistributing) true)}}
+            data-test-keymgmt-key-distribute
+          >
+            Distribute key
+          </button>
+        {{/unless}}
         {{#if @model.canDelete}}
           <button
             type="button"
@@ -63,10 +73,11 @@
         {{#if @model.provider}}
           <ConfirmAction
             @buttonClasses="toolbar-link"
-            @onConfirmAction={{this.removeKey}}
+            @onConfirmAction={{perform this.removeKey}}
             @confirmTitle="Remove this key?"
             @confirmMessage="This will remove all versions of the key from the KMS provider. The key will stay in Vault."
             @confirmButtonText="Remove"
+            @isRunning={{this.removeKey.isRunning}}
             data-test-keymgmt-key-remove
           >
             Remove key
@@ -77,10 +88,11 @@
         {{/if}}
         <ConfirmAction
           @buttonClasses="toolbar-link"
-          @onConfirmAction={{fn this.rotateKey @model.id}}
+          @onConfirmAction={{perform this.rotateKey}}
           @confirmTitle="Rotate this key?"
           @confirmMessage="After rotation, all key actions will default to using the newest version of the key."
           @confirmButtonText="Rotate"
+          @isRunning={{this.rotateKey.isRunning}}
           data-test-keymgmt-key-rotate
         >
           Rotate key
