adds tests for mfa-login-enforcement-header component

--- a/ui/app/templates/components/mfa-login-enforcement-header.hbs
+++ b/ui/app/templates/components/mfa-login-enforcement-header.hbs
@@ -1,9 +1,9 @@
 {{#if @isInline}}
-  <h3 class="title is-5">Enforcement</h3>
+  <h3 class="title is-5" data-test-mleh-title>Enforcement</h3>
 {{else}}
   <PageHeader as |p|>
     <p.levelLeft>
-      <h1 class="title is-3">
+      <h1 class="title is-3" data-test-mleh-title>
         <Icon @name="lock" @size="24" />
         {{@heading}}
       </h1>
@@ -11,7 +11,7 @@
   </PageHeader>
 {{/if}}
 <div class="has-border-top-light">
-  <p class="has-top-margin-m">
+  <p class="has-top-margin-m" data-test-mleh-description>
     {{#if @isInline}}
       An enforcement includes the authentication types, authentication methods, groups, and entities that will require this
       MFA method. This is optional and can be added later.
@@ -31,6 +31,7 @@
         @value="new"
         @groupValue={{@radioCardGroupValue}}
         @onChange={{@onRadioCardSelect}}
+        data-test-mleh-radio="new"
       />
       <RadioCard
         @title="Use existing"
@@ -40,6 +41,7 @@
         @groupValue={{@radioCardGroupValue}}
         @disabled={{not this.enforcements.length}}
         @onChange={{@onRadioCardSelect}}
+        data-test-mleh-radio="existing"
       />
       <RadioCard
         @title="Skip this step"
@@ -48,6 +50,7 @@
         @value="skip"
         @groupValue={{@radioCardGroupValue}}
         @onChange={{@onRadioCardSelect}}
+        data-test-mleh-radio="skip"
       />
     </div>
     {{#if (eq @radioCardGroupValue "existing")}}
@@ -59,7 +62,7 @@
         @options={{this.enforcements}}
         @shouldRenderName={{true}}
         @selectLimit={{1}}
-        @onChange={{@onEnforcementSelect}}
+        @onChange={{this.onEnforcementSelect}}
       />
     {{/if}}
   {{/if}}
