--- a/ui/app/templates/components/mfa-login-enforcement-header.hbs
+++ b/ui/app/templates/components/mfa-login-enforcement-header.hbs
@@ -2,6 +2,18 @@
   <h3 class="title is-5">Enforcement</h3>
 {{else}}
   <PageHeader as |p|>
+    <p.top>
+      <nav class="breadcrumb">
+        <ul>
+          <li>
+            <span class="sep">&#x0002f;</span>
+            <LinkTo @route="vault.cluster.access.mfa.enforcements.index">
+              Enforcements
+            </LinkTo>
+          </li>
+        </ul>
+      </nav>
+    </p.top>
     <p.levelLeft>
       <h1 class="title is-3">
         <Icon @name="lock" @size="24" />
