--- a/ui/app/templates/vault/cluster/access/mfa/methods/index.hbs
+++ b/ui/app/templates/vault/cluster/access/mfa/methods/index.hbs
@@ -20,4 +20,6 @@
   {{#each this.model as |item|}}
     <Mfa::MethodListItem @model={{item}} />
   {{/each}}
+{{else}}
+  <EmptyState @title="No methods found." @message="Add a new one to get started." />
 {{/if}}
