--- a/ui/app/templates/vault/cluster/access/mfa/enforcements/index.hbs
+++ b/ui/app/templates/vault/cluster/access/mfa/enforcements/index.hbs
@@ -16,17 +16,10 @@
   </ToolbarActions>
 </Toolbar>
 
-{{#if this.model.meta.total}}
+{{#if (gt this.model.length 0)}}
   {{#each this.model as |item|}}
     <Mfa::LoginEnforcementListItem @model={{item}} />
   {{/each}}
 {{else}}
   <EmptyState @title="No enforcements found." @message="Add a new one to get started." />
-{{/if}}
-{{#if (gt this.model.meta.lastPage 1)}}
-  <ListPagination
-    @page={{this.model.meta.currentPage}}
-    @lastPage={{this.model.meta.lastPage}}
-    @link="vault.cluster.access.mfa.enforcements"
-  />
 {{/if}}
