--- a/ui/app/templates/vault/cluster/access/mfa/methods/index.hbs
+++ b/ui/app/templates/vault/cluster/access/mfa/methods/index.hbs
@@ -16,15 +16,10 @@
   </ToolbarActions>
 </Toolbar>
 
-{{#if this.model.meta.total}}
+{{#if (gt this.model.length 0)}}
   {{#each this.model as |item|}}
     <Mfa::MethodListItem @model={{item}} />
   {{/each}}
-{{/if}}
-{{#if (gt this.model.meta.lastPage 1)}}
-  <ListPagination
-    @page={{this.model.meta.currentPage}}
-    @lastPage={{this.model.meta.lastPage}}
-    @link={{concat "vault.cluster.access.mfa.methods"}}
-  />
+{{else}}
+  <EmptyState @title="No methods found." @message="Add a new one to get started." />
 {{/if}}
