--- a/ui/app/templates/components/mount-accessor-select.hbs
+++ b/ui/app/templates/components/mount-accessor-select.hbs
@@ -15,7 +15,7 @@
 {{else if this.authMethods.last.value}}
   <div class="control is-expanded">
     <div class="select is-fullwidth">
-      <select name={{@name}} id={{@name}} {{on "change" this.change}}>
+      <select name={{@name}} id={{@name}} {{on "change" this.change}} data-test-mount-accessor-select>
         {{#if @noDefault}}
           <option value="">Select one</option>
         {{/if}}
@@ -23,7 +23,7 @@
           {{! token type does not need to be authorized via MFA }}
           {{#if @filterToken}}
             {{#if (not-eq method.id "token")}}
-              <option selected={{eq @value method.accessor}} value={{method.accessor}}>
+              <option selected={{eq @value method.accessor}} value={{method.accessor}} data-test-mlef-select="accessor">
                 {{method.path}}
                 ({{if @showAccessor method.accessor method.type}})
               </option>
