add component test:

--- a/ui/app/templates/components/mount-accessor-select.hbs
+++ b/ui/app/templates/components/mount-accessor-select.hbs
@@ -46,5 +46,6 @@
     value={{@value}}
     placeholder="Mount accessor"
     {{on "change" this.change}}
+    data-test-mount-accessor-default
   />
 {{/if}}
