replace test selector

--- a/ui/app/templates/components/mfa-login-enforcement-form.hbs
+++ b/ui/app/templates/components/mfa-login-enforcement-form.hbs
@@ -88,6 +88,7 @@
             @noDefault={{true}}
             @onChange={{this.setTargetValue}}
             @filterToken={{true}}
+            data-test-mlef-select="accessor"
           />
         {{else if (eq this.selectedTargetType "method")}}
           <Select
